fixing css details for mobile and Poppins font

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Yaldevi:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+  <!-- Poppins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
+
   <title>Carlos && Ponce | Portfolio</title>
 </head>
 
